--- a/30septiembre.ipynb
+++ b/30septiembre.ipynb
@@ -6,7 +6,7 @@
       "name": "30septiembre.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMT2QpCBT083dpUwlmzRv29",
+      "authorship_tag": "ABX9TyP41TAyIGqYOxAyGDlacG6/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,54 +50,55 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XUhqnuWjSLgG",
-        "outputId": "bba21a69-1325-4080-c6b5-351991595514",
+        "id": "aTczz9qVpMWx",
+        "outputId": "4ed0d9ef-f56b-4607-dc31-36609b719155",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 348
         }
       },
       "source": [
-        "contador =0\n",
+        "contador = int(0)\n",
         "for hora in range(0,24):\n",
         "  for min in range(0,60):\n",
-        "    if hora <=9:\n",
-        "      izq=\"0\"+str(hora)\n",
-        "    if min <= 9:\n",
-        "      der=\"0\"+str(min)\n",
-        "    if der==izq[::-1]:\n",
-        "      contador = contador + 1\n",
-        "      print(der + \":\" + izq)\n",
-        "print(f\"son en total: {contador}\")\n",
-        "  \n",
+        "    izq = str(hora)\n",
+        "    der = str(min)\n",
+        "    if (hora<10):\n",
+        "      izq = (\"0\"+izq)\n",
+        "    if (min<10):\n",
+        "      der = (\"0\"+ der)\n",
+        "    if (izq[::-1] == der):\n",
+        "      print(izq + \":\" + der + \" es palindromo\")\n",
+        "      contador +=1\n",
         "\n",
-        "  \n",
-        "  \n",
-        "\n",
-        "\n"
+        "print(\"Total: \"+ str(contador))"
       ],
-      "execution_count": 59,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "00:00\n",
-            "son en total: 1\n"
+            "00:00 es paindromo\n",
+            "01:10 es paindromo\n",
+            "02:20 es paindromo\n",
+            "03:30 es paindromo\n",
+            "04:40 es paindromo\n",
+            "05:50 es paindromo\n",
+            "10:01 es paindromo\n",
+            "11:11 es paindromo\n",
+            "12:21 es paindromo\n",
+            "13:31 es paindromo\n",
+            "14:41 es paindromo\n",
+            "15:51 es paindromo\n",
+            "20:02 es paindromo\n",
+            "21:12 es paindromo\n",
+            "22:22 es paindromo\n",
+            "23:32 es paindromo\n",
+            "Total: 16\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uzOarF6eP70L"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
