Creado mediante Colaboratory

--- a/02Octubre.ipynb
+++ b/02Octubre.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPKEMwF75wZl6GL4P+huO7P",
+      "authorship_tag": "ABX9TyPwUILz+jXa7399QMRn2kiI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "saJ9L3Urg8g-",
-        "outputId": "531360a7-f6b9-47e7-bdf3-2421f027ea1e",
+        "outputId": "c90574ad-56e4-4836-c29e-e3f0f7c976e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -93,7 +93,6 @@
         "                    \n",
         "def main():        \n",
         "    data=Array3D(35,14,34)\n",
-        "    print(\"espere un momento, se estan cargando los datos...\")\n",
         "    for anio in range(2016,2019):\n",
         "        for x in range(35):\n",
         "            for y in range(14):\n",
@@ -175,7 +174,6 @@
         {
           "output_type": "stream",
           "text": [
-            "espere un momento, se estan cargando los datos...\n",
             "Dijite el año del que quieres buscar la precipitacion:2017\n",
             "Dijite el estado o el nacional del que quiere informacion \n",
             "1) AGUASCALIENTES\n",
@@ -226,8 +224,8 @@
             "11 NOV\n",
             "12 DIC\n",
             "13 ANUAL\n",
-            "Opcion: 3\n",
-            "La pricipitacion en el año 2017 del estado None del mes de None fue: 1.4\n",
+            "Opcion: 2\n",
+            "La pricipitacion en el año 2017 del estado  fue: 44.9\n",
             "----------------------------------------------------------------\n",
             "regresando al menu principal\n",
             "----------------------------------------------------------------\n"
