Creado mediante Colaboratory

--- a/02Octubre.ipynb
+++ b/02Octubre.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPwUILz+jXa7399QMRn2kiI",
+      "authorship_tag": "ABX9TyPJsPkLwo3zwOhbZGzW+g1X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,10 +57,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "saJ9L3Urg8g-",
-        "outputId": "c90574ad-56e4-4836-c29e-e3f0f7c976e2",
+        "outputId": "6e883515-b41f-4310-ee57-44188cfade39",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 981
         }
       },
       "source": [
@@ -131,9 +131,6 @@
         "                        mes=int(input(\"Opcion: \"))\n",
         "                        if mes>=1 and mes<=13:\n",
         "                            print(f\"La pricipitacion en el año {anio} del estado  fue: {data.get_item(estado+1,mes,anio-2016)}\")\n",
-        "                            print(\"----------------------------------------------------------------\")\n",
-        "                            print(\"regresando al menu principal\")\n",
-        "                            print(\"----------------------------------------------------------------\")\n",
         "                            regreso_al_menu=True\n",
         "                            regreso_al_menu_principal=True\n",
         "                            pass\n",
@@ -225,10 +222,7 @@
             "12 DIC\n",
             "13 ANUAL\n",
             "Opcion: 2\n",
-            "La pricipitacion en el año 2017 del estado  fue: 44.9\n",
-            "----------------------------------------------------------------\n",
-            "regresando al menu principal\n",
-            "----------------------------------------------------------------\n"
+            "La pricipitacion en el año 2017 del estado  fue: 44.9\n"
           ],
           "name": "stdout"
         }
