Creado mediante Colaboratory

--- a/19Octubre.ipynb
+++ b/19Octubre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "19Octubre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNKefoMn8BhBrqytCx3W3cq",
+      "authorship_tag": "ABX9TyMWCAiWAqgQ9guakwEv19tw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MnVsssZsDdLA",
-        "outputId": "9cc6e0b4-fa29-406e-fcaa-1c34cfd2f2ef",
+        "outputId": "8b5a5396-1e66-444c-99bb-86c5b2826419",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 727
@@ -68,22 +68,22 @@
         "\n",
         "print(\"------------Comienza la prueba----------------------\")\n",
         "variable= ejemplo4(6)\n",
-        "print(variable)\n",
+        "print(f\"El numero de procesos fueron: {variable}\")\n",
         "print(\"---------------------------------------\")\n",
         "variable= ejemplo4(13)\n",
-        "print(variable)\n",
+        "print(f\"El numero de procesos fueron: {variable}\")\n",
         "print(\"---------------------------------------\")\n",
         "variable= ejemplo4(25)\n",
-        "print(variable)\n",
+        "print(f\"El numero de procesos fueron: {variable}\")\n",
         "print(\"---------------------------------------\")\n",
         "variable= ejemplo4(50)\n",
-        "print(variable)\n",
+        "print(f\"El numero de procesos fueron: {variable}\")\n",
         "print(\"---------------------------------------\")\n",
         "variable= ejemplo4(100)\n",
-        "print(variable)\n",
+        "print(f\"El numero de procesos fueron: {variable}\")\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,22 +93,14 @@
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
-            "3\n",
+            "El numero de procesos fueron: 3\n",
             "---------------------------------------\n",
             "Nivel1\n",
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
-            "4\n",
-            "---------------------------------------\n",
-            "Nivel1\n",
-            "Nivel2\n",
-            "Nivel2\n",
-            "Nivel2\n",
-            "Nivel2\n",
-            "Nivel2\n",
-            "5\n",
+            "El numero de procesos fueron: 4\n",
             "---------------------------------------\n",
             "Nivel1\n",
             "Nivel2\n",
@@ -116,8 +108,7 @@
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
-            "Nivel2\n",
-            "6\n",
+            "El numero de procesos fueron: 5\n",
             "---------------------------------------\n",
             "Nivel1\n",
             "Nivel2\n",
@@ -126,8 +117,17 @@
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
+            "El numero de procesos fueron: 6\n",
+            "---------------------------------------\n",
+            "Nivel1\n",
             "Nivel2\n",
-            "7\n"
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "El numero de procesos fueron: 7\n"
           ],
           "name": "stdout"
         }
