Creado mediante Colaboratory

--- a/19OctubreTarea.ipynb
+++ b/19OctubreTarea.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "19OctubreTarea.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOvfQXbJWDJVB2yDCCaErdj",
+      "authorship_tag": "ABX9TyPZG/v4lGP5vASElvuIpCga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,10 +37,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "aINA2tKiqDB4",
-        "outputId": "c40127ba-e623-4bd7-d47d-a7448958fbe6",
+        "outputId": "cd389baa-3e0e-4aab-8475-b0db1ecc4710",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 781
+          "height": 958
         }
       },
       "source": [
@@ -59,21 +59,21 @@
         "\n",
         "print(\"------------Comienza la prueba----------------------\")\n",
         "variable= ejemplo4(5)\n",
-        "print(f\"El numero de procesos fueron: {variable}\")\n",
+        "print(f\"El numero 5 tuvo en total de procesos: {variable}\")\n",
         "print(\"---------------------------------------\")\n",
         "variable= ejemplo4(10)\n",
-        "print(f\"El numero de procesos fueron: {variable}\")\n",
-        "print(\"---------------------------------------\")\n",
-        "variable= ejemplo4(15)\n",
-        "print(f\"El numero de procesos fueron: {variable}\")\n",
+        "print(f\"El numero 10 tuvo en total de procesos {variable}\")\n",
         "print(\"---------------------------------------\")\n",
         "variable= ejemplo4(100)\n",
-        "print(f\"El numero de procesos fueron: {variable}\")\n",
+        "print(f\"El numero 100 tuvo en total de procesos {variable}\")\n",
         "print(\"---------------------------------------\")\n",
         "variable= ejemplo4(1000)\n",
-        "print(f\"El numero de procesos fueron: {variable}\")\n"
+        "print(f\"El numero 1000 tuvo en total de procesos {variable}\")\n",
+        "print(\"---------------------------------------\")\n",
+        "variable= ejemplo4(10000)\n",
+        "print(f\"El numero 10000 tuvo en total de procesos {variable}\")\n"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,21 +83,14 @@
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
-            "El numero de procesos fueron: 3\n",
+            "El numero 5 tuvo en total de procesos: 3\n",
             "---------------------------------------\n",
             "Nivel1\n",
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
-            "El numero de procesos fueron: 4\n",
-            "---------------------------------------\n",
-            "Nivel1\n",
-            "Nivel2\n",
-            "Nivel2\n",
-            "Nivel2\n",
-            "Nivel2\n",
-            "El numero de procesos fueron: 4\n",
+            "El numero 10 tuvo en total de procesos 4\n",
             "---------------------------------------\n",
             "Nivel1\n",
             "Nivel2\n",
@@ -107,7 +100,7 @@
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
-            "El numero de procesos fueron: 7\n",
+            "El numero 100 tuvo en total de procesos 7\n",
             "---------------------------------------\n",
             "Nivel1\n",
             "Nivel2\n",
@@ -120,7 +113,24 @@
             "Nivel2\n",
             "Nivel2\n",
             "Nivel2\n",
-            "El numero de procesos fueron: 10\n"
+            "El numero 1000 tuvo en total de procesos 10\n",
+            "---------------------------------------\n",
+            "Nivel1\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "Nivel2\n",
+            "El numero 10000 tuvo en total de procesos 14\n"
           ],
           "name": "stdout"
         }
