Creado mediante Colaboratory

--- a/23Octubre.ipynb
+++ b/23Octubre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "23Octubre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWitOTcYnI9gM4ju235u0w",
+      "authorship_tag": "ABX9TyMlr/ID4+qpmowx/maTuKYy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,30 +204,50 @@
         "                count += 1\n",
         "    return count "
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zHyHwy1I1q33"
+        "id": "zHyHwy1I1q33",
+        "outputId": "61a95c54-a47e-4e2d-c008-993144c1ae83",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "#1+n\n",
+        "numeros=[2,3,4,5,6]\n",
         "def ejemplo8( numeros ): # numeros es una lista (arreglo en c)\n",
         "    total = 0\n",
         "    for index in range(len(numeros)):\n",
         "        total = numeros[index]\n",
         "    return total\n",
-        "ejemplo8(numeros)"
+        "to=ejemplo8(numeros)\n",
+        "print(to)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_1-aVyew3sZh"
+        "id": "_1-aVyew3sZh",
+        "outputId": "fe571611-c9ba-46c6-def6-c963d5e33c9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "#3+2n\n",
@@ -244,25 +264,58 @@
         "\n",
         "print(ejemplo9( 5 ))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tRJKQHzh44OA"
+        "id": "tRJKQHzh44OA",
+        "outputId": "2702bad2-3494-4496-a58f-41f339f6aa58",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 123
+        }
       },
       "source": [
-        "#1+n(i+1)\n",
+        "#T(n) = 1 + (n^2+n)/ 2\n",
         "def ejemplo10( n ):\n",
-        "    count = 0\n",
-        "    for i in range( n ) :\n",
-        "        for j in range( i+1 ) :\n",
-        "            count += 1\n",
-        "    return count"
+        "  count = 0\n",
+        "  for i in range( n ) :\n",
+        "    for j in range( i+1 ) :\n",
+        "      count += 1\n",
+        "  return count\n",
+        "\n",
+        "print(ejemplo10(5))\n",
+        "print(ejemplo10(6))\n",
+        "print(ejemplo10(7))\n",
+        "print(ejemplo10(8))\n",
+        "print(ejemplo10(9))\n",
+        "print(ejemplo10(10))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15\n",
+            "21\n",
+            "28\n",
+            "36\n",
+            "45\n",
+            "55\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
