Creado mediante Colaboratory

--- a/02Diciembre_Tarea.ipynb
+++ b/02Diciembre_Tarea.ipynb
@@ -6,7 +6,7 @@
       "name": "02Diciembre_Tarea.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMgx5XN1eASBigRzk6ICzvd",
+      "authorship_tag": "ABX9TyMrz1gGH7K2C1HTzHqY2273",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,34 +122,52 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nDPX_OKNKTQl",
-        "outputId": "21bbd93d-1c62-42e3-f5d2-d6590d35d4fe"
+        "outputId": "327ff42f-f0ea-4694-dd78-04719df969ae"
       },
       "source": [
         "#Tercer pograma Sacar de un ADT pila el valor en la posición media\n",
         "\n",
-        "lista=[1,2,3,4,5,6,7,8,9]\n",
+        "lista=[1,2,3,4,5,6,7,8]\n",
         "\n",
-        "def ADT(lista):\n",
-        "  print(f\"La lista original es:\\n\\t {lista}\\n\")\n",
-        "  cadena= len(lista)//2\n",
-        "  print(f\"El elemento medio de la lista es: {lista[cadena]}\\n\")\n",
-        "  lista.pop(cadena)\n",
-        "  print(f\"La nueva cadena es:\\n\\t {lista}\")\n",
+        "def mitad(lista_1):\n",
+        "    contador=0\n",
+        "    if contador==0:\n",
+        "        print(lista)\n",
+        "        contador+=1\n",
+        "    \n",
+        "    enmedio= len(lista_1)//2\n",
+        "    print(\"Elemento a sacar es: \"+str(lista_1[len(lista_1)//2 ])+\"\\n\")\n",
+        "    lista_1.pop(enmedio)\n",
+        "    enmedio=0\n",
+        "    \n",
+        "    if len(lista_1)>=3:\n",
+        "        mitad(lista_1)\n",
         "\n",
-        "ADT(lista)"
+        "mitad(lista)"
       ],
-      "execution_count": 30,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "La lista original es:\n",
-            "\t [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8]\n",
+            "Elemento a sacar es: 5\n",
             "\n",
-            "El elemento medio de la lista es: 5\n",
+            "[1, 2, 3, 4, 6, 7, 8]\n",
+            "Elemento a sacar es: 4\n",
             "\n",
-            "La nueva cadena es:\n",
-            "\t [1, 2, 3, 4, 6, 7, 8, 9]\n"
+            "[1, 2, 3, 6, 7, 8]\n",
+            "Elemento a sacar es: 6\n",
+            "\n",
+            "[1, 2, 3, 7, 8]\n",
+            "Elemento a sacar es: 3\n",
+            "\n",
+            "[1, 2, 7, 8]\n",
+            "Elemento a sacar es: 7\n",
+            "\n",
+            "[1, 2, 8]\n",
+            "Elemento a sacar es: 2\n",
+            "\n"
           ],
           "name": "stdout"
         }
