--- a/6Diciembre_Tarea_RecursivaBinaria.ipynb
+++ b/6Diciembre_Tarea_RecursivaBinaria.ipynb
@@ -6,7 +6,7 @@
       "name": "6Diciembre_Tarea_RecursivaBinaria.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOtA1CcoI7aahutAR1D3Qwm",
+      "authorship_tag": "ABX9TyO+M2NYtwXbnqnMxLFMOvez",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SYP5Rj1atVgW",
-        "outputId": "e810e5a3-79a4-4c27-c278-84bed5d49987"
+        "outputId": "b58dfcd3-e5c7-4b0c-8650-897f7b05bd82"
       },
       "source": [
         "alumno1={'id':2, 'nombre':\"Juan\" , 'carrera':\"ICO\", 'promedio':7.67}\n",
@@ -85,9 +85,9 @@
         "        print(\"El alumno no existe en la base de datos.\")\n",
         "\n",
         "\n",
-        "dicc=buscar(bd, dato, min, max)"
+        "buscar(bd, dato, min, max)"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s80vOaMWtj3a",
-        "outputId": "6b70acf1-d88e-4cef-e70d-010db8ab0f10"
+        "outputId": "8c3c0ef2-7119-45c1-b924-5f00994d0ff4"
       },
       "source": [
         "alumno1={'id':2, 'nombre':\"Juan\" , 'carrera':\"ICO\", 'promedio':7.67}\n",
@@ -160,9 +160,9 @@
         "        print(\"El alumno no existe en la base de datos.\")\n",
         "\n",
         "\n",
-        "dicc=buscar(bd, dato, min, max)"
+        "buscar(bd, dato, min, max)"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
