--- a/6Diciembre_Tarea_RecursivaBinaria.ipynb
+++ b/6Diciembre_Tarea_RecursivaBinaria.ipynb
@@ -6,7 +6,6 @@
       "name": "6Diciembre_Tarea_RecursivaBinaria.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOUdSVqsVio2b6Bz+2AXBJB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SYP5Rj1atVgW",
-        "outputId": "bde92608-978a-4305-d43c-3bc7f28a27f7"
+        "outputId": "e24c5503-fa03-4b73-8781-dad093d67f52"
       },
       "source": [
         "alumno1={'id':2, 'nombre':\"Juan\" , 'carrera':\"ICO\", 'promedio':7.67}\n",
@@ -75,7 +74,7 @@
         "                medio-=1\n",
         "                buscar(bd, dato, min, medio)\n",
         "        elif dato> bd[medio]['id']:\n",
-        "            if dato == bd[medio]['id'] and medio > 0:\n",
+        "            if dato == bd[medio]['id']:\n",
         "                print(f\"{bd[medio]['nombre']} estudia la carrera {bd[medio]['carrera']} y tiene un promedio de {bd[medio]['promedio']}\") \n",
         "            else:\n",
         "                medio+=1\n",
@@ -86,7 +85,7 @@
         "\n",
         "buscar(bd, dato, min, max)"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +105,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s80vOaMWtj3a",
-        "outputId": "2ed5ad66-7eaa-4e78-dd25-7574e787f1ff"
+        "outputId": "3cc8df89-3647-4703-8973-4fce80495992"
       },
       "source": [
         "alumno1={'id':2, 'nombre':\"Juan\" , 'carrera':\"ICO\", 'promedio':7.67}\n",
@@ -149,7 +148,7 @@
         "                medio-=1\n",
         "                buscar(bd, dato, min, medio)\n",
         "        elif dato> bd[medio]['id']:\n",
-        "            if dato == bd[medio]['id'] and medio > 0:\n",
+        "            if dato == bd[medio]['id']:\n",
         "                print(f\"{bd[medio]['nombre']} estudia la carrera {bd[medio]['carrera']} y tiene un promedio de {bd[medio]['promedio']}\") \n",
         "            else:\n",
         "                medio+=1\n",
@@ -160,7 +159,7 @@
         "\n",
         "buscar(bd, dato, min, max)"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
